--- a/04-demo-webpack/index.html
+++ b/04-demo-webpack/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>05</title>
+    <title>04 - demo-webpack</title>
   </head>
   <body>
     <app></app>
